--- a/Changelog.txt
+++ b/Changelog.txt
@@ -196,6 +196,10 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 [*]API Bump to Dragon Bones (100022)
 [*]Bugfix for an arror that prevented to open the report window on PTS.
 
+0.7.12 463,274 (20.01.2018) 21:31
+[*]Fixed scene toggle for main window
+[*]Fixed issue preventing the loading of japanese locale
+
 0.8
 [*] Combat Metrics can now be found on Github: https://github.com/Solinur/CombatMetrics. 
 [*] The UI has been completely rewritten. It still works the same for most parts, but the code behind it is cleaner and more performant. Hopefully I didn't introduce too many bugs :D.
