--- a/Changelog.txt
+++ b/Changelog.txt
@@ -203,9 +203,14 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 0.7.13 480,303 (26.01.2018) 23:14
 [*]Fixed an issue where the LiveReport window could show after the loading screen even if the option to turn Combat Metrics off in Cyrodil was active.
 
+0.7.13 487,180 (27.01.2018) 21:04
+[*]Fixed an issue where group detection failed.
+
 0.8
 [*] Combat Metrics can now be found on Github: https://github.com/Solinur/CombatMetrics. 
 [*] The UI has been completely rewritten. It still works the same for most parts, but the code behind it is cleaner and more performant. Hopefully I didn't introduce too many bugs :D.
+[*] Reworked the system how fights are stored. A seperate "Sub-Addon" (CombatMetricsFightData) is used for this, so it uses it own file in the SavedVariables folder. When saving a fight it will check if it can be safely stored. An error message will appear if there is not enough space.
+[*] Added a setting to specify the maximum memory for saving fights. (note: this sets the memory of the data in game, which doesn't have to match the size of the file in your SavedVariables folder.)
 [*] Added Character Info to the report panel
 [*] Added the current version of the ESO client to the report panel (lower right)
 [*] Added "Critical Damage Done" to the respective stats panels. (Separately for Spell/Weapon Attacks)
@@ -219,3 +224,4 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 [*] Fixed an issue where the name of the fight was not set in the fightlist if the fight had not been calculated yet.
 [*] Fixed an issue when a unit and a debuff were selected that nothing got shown in the combat log.
 [*] Added an option to change opacity of the live report.
+[*] Added an option to lock the position of the live report.
