--- a/Changelog.txt
+++ b/Changelog.txt
@@ -209,20 +209,20 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 0.8
 [*] Combat Metrics can now be found on Github: https://github.com/Solinur/CombatMetrics. 
 [*] The UI has been completely rewritten. It still works the same for most parts, but the code behind it is cleaner and more performant. Hopefully I didn't introduce too many bugs :D.
-[*] Reworked the system how fights are stored. A seperate "Sub-Addon" (CombatMetricsFightData) is used for this, so it uses it own file in the SavedVariables folder. When saving a fight it will check if it can be safely stored. An error message will appear if there is not enough space.
-[*] Added a setting to specify the maximum memory for saving fights. (note: this sets the memory of the data in game, which doesn't have to match the size of the file in your SavedVariables folder.)
+[*] Reworked the system how fights are stored. A seperate "Sub-Addon" (CombatMetricsFightData) is used for this, so it uses it own file in the SavedVariables folder. When saving a fight it will check if it can be safely stored. An error message will appear if there is not enough space. The new storage system is way more efficient for fights where you want to store the full combat log.
+[*] Added a setting to specify the maximum memory for saving fights. (note: this sets the memory of the data in game, which usually doesn't match the size of the file on your harddisk in your SavedVariables folder.)
 [*] Added Character Info to the report panel
 [*] Added the current version of the ESO client to the report panel (lower right)
 [*] Added "Critical Damage Done" to the respective stats panels. (Separately for Spell/Weapon Attacks)
-[*] Added "Spell Penetration" and "Physical Penetration" to the respective stats panels. It will update based on the targets selected in the unit panel. A Setting in the settings menu allows you to change the assumed resistance of your targets and the assumed value for crusher as I cannot read it from the API.
+[*] Added "Spell Penetration" and "Physical Penetration" to the respective stats panels. It will update based on the targets selected in the unit panel. A Setting in the settings menu allows you to change the assumed resistance of your targets and the assumed value for crusher as it cannot be read from the API.
 [*] Reworked how average values of stats are calculated. Before all damage effects would be used to weight the stats. Now magicka related stats are only weighted by magicka damage effects. "Critical Damage Done" is only weighted by crits.
 [*] Buffs and Debuffs cast before the start of the fight will now be tracked.
 [*] The fight label can now be edited. Just double click it!
 [*] Added an option to prioritize keeping boss fights when deleting recent fights due to reaching the limit.
-[*] Added an option to mark buffs/debuffs as favourite. Just right-click on one in the buff panel. They will then be shown on the top of the List.
+[*] Added an option to mark buffs/debuffs as favourite. Just right-click one in the buff panel. Favourite buffs will be shown on the top of the List.
 [*] The fightlist (when you "load" a fight) shows a few more bits of information about the fight, like zone, character, time. Depending on the Selected Category, (e.g. "Damage Caused", "Healing Done") DPS or HPS will be shown.
 [*] Fixed an issue where the name of the fight was not set in the fightlist if the fight had not been calculated yet.
 [*] Fixed an issue when a unit and a debuff were selected that nothing got shown in the combat log.
 [*] Added an option to change opacity of the live report.
 [*] Added an option to lock the position of the live report.
-[*] Added an internal parameter called hpstime. This allows to calculate the HPS based of the time you have been healing, while DPS can be calculated based on the time you did damage. In the live report window the bigger one of the two will be shown. In the main report the active time will reflect hpstime when a healing category is selected. This should also address an issue where refreshing path would cause your dps to lower at the end of the fight despite nothing really happening anymore.
+[*] Added an internal parameter called hpstime. This allows to calculate the HPS based of the time you have been healing, while DPS can be calculated based on the time you did damage (In both instances its the time that passed between the first and the last damage or healing you did). In the live report window the bigger one of the two will be shown. In the main report the active time will reflect hpstime when a healing category is selected. This should also address an issue where refreshing path would cause your dps to lower at the end of the fight despite nothing really happening anymore.
