--- a/Changelog.txt
+++ b/Changelog.txt
@@ -206,7 +206,7 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 0.7.13 487,180 (27.01.2018) 21:04
 [*]Fixed an issue where group detection failed.
 
-0.8.0
+0.8.0 (beta)
 [*] Combat Metrics can now be found on Github: https://github.com/Solinur/CombatMetrics. 
 [*] The UI has been completely rewritten. It still works the same for most parts, but the code behind it is cleaner and more performant. Hopefully I didn't introduce too many bugs :D.
 [*] Reworked the system how fights are stored. A seperate "Sub-Addon" (CombatMetricsFightData) is used for this, so it uses its own file in the SavedVariables folder. When saving a fight it will check if it can be safely stored. An error message will appear if there is not enough space. The new storage system is way more efficient for fights where you want to store the full combat log.
@@ -226,4 +226,8 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 [*] Added an option to change opacity of the live report.
 [*] Added an option to lock the position of the live report.
 [*] Added an internal parameter called hpstime. This allows to calculate the HPS based of the time you have been healing, while DPS can be calculated based on the time you did damage (In both instances its the time that passed between your first and last damage or healing respectively). In the live report window the bigger one of the two will be shown. In the main report the active time will reflect hpstime when a healing category is selected. This should also address an issue where refreshing path would cause your dps to lower at the end of the fight despite nothing really happening anymore.
+
+0.8.1
 [*] Added an option button to the side bar. For now it just has a shortcut to toggle IDs 
+[*] Added tracking of Equip and Skillbars for future use.
+[*] Several bug fixes introduced in 0.8.0
