--- a/Changelog.txt
+++ b/Changelog.txt
@@ -241,4 +241,7 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 [*] Fixed an issue where the window position would sometimes not be saved when it was dragged around. 
 
 0.8.1.3 553,007 (14.03.2018) 00:01
-[*] Fixed an issue were loading of a fight could fail if a fight of the same date had been loaded already. (thx @Liko)
+[*] Fixed an issue where loading of a fight could fail if a fight of the same date had been loaded already. (thx @Liko)
+
+0.8.1.4 565,212 (16.03.2018) 00:18
+[*] Fixed an issue that would cause an error message
