--- a/Changelog.txt
+++ b/Changelog.txt
@@ -290,3 +290,7 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 0.8.2.7 904,149 (14.08.2018) 01:06
 [*]Fixed tracking of Piercing Spear and Hemorrhage
  	
+0.8.2.8 946,987 (21.08.2018) 23:54
+[*] Attempted to fix an issue in Cloudrest where the fight would reset when player goes to the shadow world. While in the shadow world, Combat Metrics will ignore changes to combat status. 
+[*] Fixed outdated API number in CombatMetricsFightData submodule
+[*] Fixed an error that could occur when selecting a fight via the fight list panel
