--- a/Changelog.txt
+++ b/Changelog.txt
@@ -301,3 +301,8 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 
 0.8.2.10 1,067,304 (26.10.2018) 20:24
 [*] Fixed tracking of Spell Strategist.
+
+0.8.2.11 1,113,154 (10.11.2018) 21:23
+[*] Added a temporary workaround for Spell Strategist. The uptime that is shown refers to the time when at least one buff/debuff is active. Since the buff can overlap with itself (for double bonus) briefly, the theoretical possible uptime would be above 100% (for mre on this see here: https://forums.elderscrollsonline.com/en/discussion/443636/spell-strategist-stacking-when-soloing-a-single-target-bug-or-feature.
+[*] Updated French localization. Thanks to @Floliroy
+[*] Updated libraries and changed the way they are loaded. They are still embedded, but need to be activated in the addon list ingame. This requires to check the "Allow out of date add-ons" box.
