--- a/Changelog.txt
+++ b/Changelog.txt
@@ -309,3 +309,6 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 
 0.8.2.12 1,120,978 (11.11.2018) 11:23
 [*] Fixed an issue with the new library format introduced in last patch. Sorry for the inconvenience.
+
+0.8.3 1,227,401 (06.01.2019) 18:52
+[*] Fixed an issue, where some sources for Major & Minor Force were not recognized when calculating the critical damage bonus stat. [thx @SnakE for reporting this)
