--- a/Changelog.txt
+++ b/Changelog.txt
@@ -312,3 +312,7 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 
 0.8.3 1,227,401 (06.01.2019) 18:52
 [*] Fixed an issue, where some sources for Major & Minor Force were not recognized when calculating the critical damage bonus stat. [thx @SnakE for reporting this)
+
+0.8.4 1,298,832 (22.01.2019) 00:52
+[*]API Bump to Wrathstone (100026)
+[*]Reorganized bundled libraries (Make sure to activate them in the Addon Panel). This should fix a lua error some received.
