--- a/Changelog.txt
+++ b/Changelog.txt
@@ -316,3 +316,9 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 0.8.4 1,298,832 (22.01.2019) 00:52
 [*]API Bump to Wrathstone (100026)
 [*]Reorganized bundled libraries (Make sure to activate them in the Addon Panel). This should fix a lua error some received.
+
+0.9.0 
+[*] Info Panel: Equipment, CP, Weaving Metrics
+[*] Graph Panel
+[*] Uptime % in the (De-)Buffs Out Panel are now considered towards the total time the respective units have been engaged in combat. This should lead to more reasonable results when you fight different bosses in succession (e.g. the iterations of Z'Maja in Cloudrest). It won't however help for fights where units are inactive in between (e.g. The minibosses in Asylum)
+
