--- a/Changelog.txt
+++ b/Changelog.txt
@@ -347,3 +347,5 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 [*] Right click is no longer used to reset the selection in the different list panels, instead this is now set to the 3rd mouse button. 
 (Note: You can also just click on a single unit to select it and then click again on it to deselect it)
 [*] Added detection for Khajit Passive and Minor Force from the 5 pc bonus of Tzogvin’s Warband to show correct Critical Damage Modifier values. Please let me know if anything is missing there.
+
+0.9.0 (beta4)
