--- a/Changelog.txt
+++ b/Changelog.txt
@@ -375,3 +375,8 @@ Version 0.5.10 6,774 (02.07.2016, 1:12)
 [*] Fixed an issue where the main window position was changing between relog / reloadui
 [*] Fixed an issue that resulted in a lua error or wrong data when posting the DPS to a selection of units.
 [*] Fixed an issue that resulted in wrong versions to be sent when submitting feedback ingame
+
+0.9.5 1,818,152 (04.08.2019) 02:29
+[*] Fixed an issue where heal ratio in live report was always 0%.
+[*] Fixed an issue where group heal amount in fight report was always 0.
+[*] Added Entropy and Soul Trap ability detection for Scalebreaker.
